--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,10 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "axios": "^0.27.1",
+    "i": "^0.3.7",
+    "js-cookie": "^3.0.1",
     "next": "^12.1.5",
+    "npm": "^8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
