--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "axios": "^0.27.1",
+    "framer-motion": "^6.3.3",
     "i": "^0.3.7",
     "js-cookie": "^3.0.1",
     "next": "^12.1.5",
